[package]
name = "esm_message"
version = "0.1.0"
authors = ["Bryan <WolfkillArcadia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.1"
message-io = { version = "0.14", default-features = false, features = ["tcp"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
arma-rs = { path = "../arma-rs/core", features = ["chrono_datetime"] }
